--- a/AboutDialog.ui
+++ b/AboutDialog.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>About wget Downloader</string>
+   <string>About curl Downloader</string>
   </property>
   <property name="windowIcon">
    <iconset resource="resources/resources.qrc">
@@ -80,7 +80,7 @@
             </font>
            </property>
            <property name="text">
-            <string>wget Downloader</string>
+            <string>curl Downloader</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -196,7 +196,7 @@ QGroupBox::title {
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_11">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="0,0,1">
+         <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="0,0,0">
           <property name="topMargin">
            <number>0</number>
           </property>
@@ -310,7 +310,7 @@ Qt Framework</string>
                </font>
               </property>
               <property name="text">
-               <string>wget</string>
+               <string>curl</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -320,7 +320,7 @@ Qt Framework</string>
             <item>
              <widget class="QLabel" name="label_11">
               <property name="text">
-               <string>version 1.11.4</string>
+               <string>version 8.8.0</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -332,7 +332,7 @@ Qt Framework</string>
           <item>
            <widget class="QLabel" name="label_8">
             <property name="text">
-             <string>&lt;a href=&quot;https://gnuwin32.sourceforge.net/packages/wget.htm&quot;&gt;https://gnuwin32.sourceforge.net/packages/wget.htm&lt;/a&gt;</string>
+             <string>&lt;a href=&quot;https://curl.se/windows/&quot;&gt;https://curl.se/windows/&lt;/a&gt;</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
