--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>wget Downloader</string>
+   <string>curl Downloader</string>
   </property>
   <property name="windowIcon">
    <iconset resource="resources/resources.qrc">
