--- a/AddItemDialog.ui
+++ b/AddItemDialog.ui
@@ -71,8 +71,20 @@
      </item>
      <item row="3" column="2">
       <widget class="QComboBox" name="m_protocolCombo">
-       <property name="layoutDirection">
-        <enum>Qt::RightToLeft</enum>
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QComboBox::AdjustToMinimumContentsLength</enum>
+       </property>
+       <property name="frame">
+        <bool>true</bool>
+       </property>
+       <property name="modelColumn">
+        <number>0</number>
        </property>
        <item>
         <property name="text">
