--- a/AddItemDialog.ui
+++ b/AddItemDialog.ui
@@ -96,6 +96,11 @@
          <string>SOCKS 5</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>None</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
@@ -112,6 +117,12 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>m_url</tabstop>
+  <tabstop>m_serverIP</tabstop>
+  <tabstop>m_serverPort</tabstop>
+  <tabstop>m_protocolCombo</tabstop>
+ </tabstops>
  <resources>
   <include location="resources/resources.qrc"/>
  </resources>
