--- a/ConfigurationDialog.ui
+++ b/ConfigurationDialog.ui
@@ -128,6 +128,13 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>m_curlLocation</tabstop>
+  <tabstop>m_DownloadFolder</tabstop>
+  <tabstop>m_waitSpinbox</tabstop>
+  <tabstop>m_curlButton</tabstop>
+  <tabstop>m_downloadsButton</tabstop>
+ </tabstops>
  <resources>
   <include location="resources/resources.qrc"/>
  </resources>
