--- a/AboutDialog.ui
+++ b/AboutDialog.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>437</width>
-    <height>302</height>
+    <width>579</width>
+    <height>371</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>437</width>
-    <height>302</height>
+    <width>579</width>
+    <height>371</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>437</width>
-    <height>302</height>
+    <width>579</width>
+    <height>371</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -31,7 +31,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
+    <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,1">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0">
        <item>
@@ -348,6 +348,67 @@ Qt Framework</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
+            </property>
+            <property name="openExternalLinks">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="Line" name="line_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QLabel" name="label_11">
+            <property name="minimumSize">
+             <size>
+              <width>32</width>
+              <height>32</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>32</width>
+              <height>32</height>
+             </size>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <layout class="QVBoxLayout" name="verticalLayout_6">
+            <item>
+             <widget class="QLabel" name="label_13">
+              <property name="font">
+               <font>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Ubuntu Monospace
+Font</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_12">
+            <property name="text">
+             <string>&lt;a href=&quot;https://fonts.google.com/specimen/Ubuntu+Mono&quot;&gt;https://fonts.google.com/specimen/Ubuntu+Mono&lt;/a&gt;</string>
             </property>
             <property name="openExternalLinks">
              <bool>true</bool>
