--- a/ConsoleOutputDialog.ui
+++ b/ConsoleOutputDialog.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>729</width>
+    <width>803</width>
     <height>496</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Process console output</string>
