--- a/ItemWidget.ui
+++ b/ItemWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>667</width>
-    <height>60</height>
+    <height>75</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -60,6 +60,8 @@
           <property name="font">
            <font>
             <pointsize>12</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
            </font>
           </property>
           <property name="text">
@@ -71,7 +73,7 @@
          <widget class="QLabel" name="m_status">
           <property name="minimumSize">
            <size>
-            <width>80</width>
+            <width>100</width>
             <height>0</height>
            </size>
           </property>
@@ -80,6 +82,13 @@
             <width>80</width>
             <height>16777215</height>
            </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
           </property>
           <property name="text">
            <string/>
@@ -100,14 +109,13 @@
          <widget class="QLabel" name="m_remain">
           <property name="minimumSize">
            <size>
-            <width>80</width>
+            <width>100</width>
             <height>0</height>
            </size>
           </property>
           <property name="font">
            <font>
-            <weight>75</weight>
-            <bold>true</bold>
+            <pointsize>10</pointsize>
            </font>
           </property>
           <property name="text">
@@ -129,14 +137,13 @@
          <widget class="QLabel" name="m_speed">
           <property name="minimumSize">
            <size>
-            <width>40</width>
+            <width>50</width>
             <height>0</height>
            </size>
           </property>
           <property name="font">
            <font>
-            <weight>75</weight>
-            <bold>true</bold>
+            <pointsize>10</pointsize>
            </font>
           </property>
           <property name="text">
@@ -158,7 +165,7 @@
          <widget class="QLabel" name="m_progress">
           <property name="minimumSize">
            <size>
-            <width>40</width>
+            <width>50</width>
             <height>0</height>
            </size>
           </property>
@@ -170,6 +177,7 @@
           </property>
           <property name="font">
            <font>
+            <pointsize>10</pointsize>
             <weight>75</weight>
             <bold>true</bold>
            </font>
