--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -16,5 +16,6 @@
 	<file>info.svg</file>
 	<file>settings.svg</file>
 	<file>curl-symbol.png</file>
+	<file>Ubuntu-R.ttf</file>
   </qresource>
 </RCC>
