--- a/AddItemDialog.ui
+++ b/AddItemDialog.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>601</width>
-    <height>147</height>
+    <height>173</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>600</width>
-    <height>0</height>
+    <width>601</width>
+    <height>173</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>16777215</width>
-    <height>150</height>
+    <width>601</width>
+    <height>173</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -32,46 +32,6 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Proxy server port</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QLineEdit" name="m_serverIP">
-       <property name="toolTip">
-        <string>Proxy server IP or name to use.</string>
-       </property>
-       <property name="placeholderText">
-        <string>Enter the IP or name of the proxy server.</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2">
-      <widget class="QLineEdit" name="m_serverPort">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="toolTip">
-        <string>Port of the proxy server.</string>
-       </property>
-       <property name="placeholderText">
-        <string>Enter the port of the proxy server.</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QLineEdit" name="m_url">
-       <property name="toolTip">
-        <string>Url to download.</string>
-       </property>
-       <property name="placeholderText">
-        <string>Enter the url to download.</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
@@ -79,17 +39,24 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Url</string>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>Protocol</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Proxy server port</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Url</string>
        </property>
       </widget>
      </item>
@@ -134,6 +101,53 @@
          <string>None</string>
         </property>
        </item>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QLineEdit" name="m_serverPort">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="toolTip">
+        <string>Port of the proxy server.</string>
+       </property>
+       <property name="placeholderText">
+        <string>Enter the port of the proxy server.</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLineEdit" name="m_url">
+       <property name="toolTip">
+        <string>Url to download.</string>
+       </property>
+       <property name="placeholderText">
+        <string>Enter the url to download.</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLineEdit" name="m_serverIP">
+       <property name="toolTip">
+        <string>Proxy server IP or name to use.</string>
+       </property>
+       <property name="placeholderText">
+        <string>Enter the IP or name of the proxy server.</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Output Name</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="2">
+      <widget class="QLineEdit" name="m_name">
+       <property name="placeholderText">
+        <string>Filename on disk (Leave empty to use the url name).</string>
+       </property>
       </widget>
      </item>
     </layout>
