--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -20,5 +20,6 @@
 	<file>curl-symbol.png</file>
 	<file>Ubuntu-R.ttf</file>
 	<file>Logo-ubuntu.svg</file>
+	<file>kofi_logo.png</file>
   </qresource>
 </RCC>
