--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -67,7 +67,7 @@
         <item>
          <spacer name="m_spacer">
           <property name="orientation">
-           <enum>Qt::Vertical</enum>
+           <enum>Qt::Orientation::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
@@ -106,6 +106,8 @@
    <addaction name="actionApplication_settings"/>
    <addaction name="actionAbout"/>
    <addaction name="separator"/>
+   <addaction name="actionMinimize"/>
+   <addaction name="separator"/>
    <addaction name="actionExit_application"/>
   </widget>
   <action name="actionAdd_file_to_download">
@@ -128,6 +130,9 @@
    <property name="text">
     <string>About...</string>
    </property>
+   <property name="toolTip">
+    <string>About this application</string>
+   </property>
   </action>
   <action name="actionExit_application">
    <property name="icon">
@@ -147,9 +152,44 @@
     <string>Application settings...</string>
    </property>
   </action>
+  <action name="actionMinimize">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="resources/resources.qrc">
+     <normaloff>:/Downloader/minimize.svg</normaloff>:/Downloader/minimize.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Minimize</string>
+   </property>
+   <property name="toolTip">
+    <string>Minimizes the application to the tray menu.</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::MenuRole::NoRole</enum>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="resources/resources.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionMinimize</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
