Identify servers that don't support resume. Bump to version 1.6.

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -161,7 +161,7 @@
     <string>Minimize</string>
    </property>
    <property name="toolTip">
-    <string>Minimizes the application to the tray menu.</string>
+    <string>Minimizes the application to the system tray</string>
    </property>
    <property name="menuRole">
     <enum>QAction::MenuRole::NoRole</enum>
